# electric-sheep

./: CMakeLists.txt  ready_vs2015.bat
es_console/: main.cpp
es_lib/: asset_map.h  scoped_render.h  sdl.h
